--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.9.1
 black==25.1.0
 click==8.2.1
 Django==5.2.4
+django-debug-toolbar==6.0.0
 mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
+pillow==11.3.0
 platformdirs==4.3.8
 python-dotenv==1.1.1
 sqlparse==0.5.3
